---
source: src/manifest/tests/mod.rs
expression: "manifest!(\"basic.kdl\")"
---
Manifest {
    systems: {
        System {
            arch: Aarch64,
            kernel: Darwin,
        }: SystemManifest {
            packages: {
                "libclang": Package {
                    attribute: "libclang",
                    outputs: {
                        "lib",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "nix": Package {
                    attribute: "nix",
                    outputs: {
                        "dev",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "pkg-config-unwrapped": Package {
                    attribute: "pkg-config-unwrapped",
                    outputs: {
                        "out",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
            },
            env: {
                "LIBCLANG_PATH": "{libclang.lib}/lib",
            },
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "cache.nixos.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "nix-community.cachix.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "cache.nixos.org-1",
                    key: 6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=,
                },
                PublicKey {
                    name: "nix-community.cachix.org-1",
                    key: mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=,
                },
            ],
        },
        System {
            arch: X86_64,
            kernel: Linux,
        }: SystemManifest {
            packages: {
                "git": Package {
                    attribute: "git",
                    outputs: {
                        "out",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "libclang": Package {
                    attribute: "libclang",
                    outputs: {
                        "lib",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "mercurial": Package {
                    attribute: "mercurial",
                    outputs: {},
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "nix": Package {
                    attribute: "nix",
                    outputs: {
                        "dev",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
                "pkg-config-unwrapped": Package {
                    attribute: "pkg-config-unwrapped",
                    outputs: {
                        "out",
                    },
                    source: Hydra(
                        Jobset {
                            base: "https://hydra.nixos.org",
                            project: "nixpkgs",
                            jobset: "unstable",
                            job: "{attribute}.{system}",
                        },
                    ),
                },
            },
            env: {
                "LIBCLANG_PATH": "{libclang.lib}/lib",
            },
            caches: [
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "cache.nixos.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "nix-community.cachix.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ],
            public_keys: [
                PublicKey {
                    name: "cache.nixos.org-1",
                    key: 6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=,
                },
                PublicKey {
                    name: "nix-community.cachix.org-1",
                    key: mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=,
                },
            ],
        },
    },
}
